# AI_Engineering_Fundamentals

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/: DATA_SCHEMAS.md  load_corpus.py
data/ai_engineering_docs/: api_references.json  concepts.json  config_files.json  random_information.json  troubleshooting.json  tutorials.json
data/contracts/: contract_001_employment.txt  (+4 more)
module_01/: m1-1-mini-env-setup.ipynb  m1-2-lab-news-briefing.ipynb  m1-2-mini-ollama-setup.ipynb  m1-3-lab-hello-llm.ipynb
module_02/: m2-2-mini-multihead.ipynb  m2-4-proj-mini-transformer.ipynb
module_03/: m3-2-mini-context.ipynb  m3-4-mini-sampling.ipynb  m3-6-mini-streaming.ipynb
module_04/: m4-1-mini-system-prompt.ipynb  m4-10-lab-secure-chatbot.ipynb  m4-2-mini-few-shot.ipynb  m4-3-mini-cot.ipynb  m4-4-mini-structured.ipynb  m4-5-mini-chaining.ipynb  m4-6-mini-react-prompt.ipynb  m4-7-mini-injection.ipynb  m4-8-lab-data-extractor.ipynb  m4-9-lab-reasoning-engine.ipynb  mini-attention-viz.ipynb
module_07/: m7-4-mini-react.ipynb  m7-5-mini-memory.ipynb  m7-6-lab-tool-agent.ipynb
module_08/: extractor.py  m8-1-proj-document-extractor.ipynb  m8-2-mini-doc-extractor-01-basic-extraction.ipynb  m8-3-mini-doc-extractor-02-schema-validation.ipynb  m8-4-mini-doc-extractor-03-multi-document-types.ipynb  m8-5-mini-doc-extractor-04-error-handling.ipynb  m8-6-mini-doc-extractor-05-batch-processing.ipynb
module_09/: m9-1-mini-reference-eval.ipynb  m9-2-mini-llm-judge.ipynb  m9-3-mini-auto-grader.ipynb  m9-4-lab-evaluation-pipeline.ipynb  m9-5-lab-agent-evaluation.ipynb
module_1/: m1-1-mini-env-setup.ipynb
module_10/: app.py  m10-1-mini-fastapi.ipynb  m10-2-mini-async.ipynb  m10-3-mini-cache.ipynb  m10-4-mini-retry.ipynb  m10-5-mini-observability.ipynb  m10-6-mini-cost.ipynb  m10-7-lab-production-api.ipynb
module_2/: mini-positional.ipynb
(+90 files in other folders)
