[project]
name = "ai-engineering-fundamentals"
version = "0.1.0"
description = "AI Engineering Track - Fundamentals Course"
requires-python = ">=3.10"
dependencies = [
    "IPython",
    "anthropic",
    "matplotlib",
    "numpy",
    "openai",
    "python-dotenv",
    "requests",
    "seaborn",
    "tiktoken",
    "torch",
    "jupyter",
    "ipykernel",
    "chromadb>=1.5.5",
    "gradio>=6.10.0",
    "markdown>=3.10.2",
    "rouge-score",
    "nltk",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "sse-starlette>=3.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
